you should use STC_LEX_HTML instead.

wxSTC: Implemented Fix for SF Bug #1436503.  Delay the start of the
DnD operation in case the user just intended to click, not drag.

Updated the analogclock.py module to the new analogclock package from
E. A. Tacao.

Added the wx.lib.mixins.listctrl.CheckListCtrlMixin class from Bruce
Who, which makes it easy to put checkboxes on list control items.






2.6.2.1
-------
* 10-Jan-2006

wxMSW: Fix for bug #1211907, popup menu indenting inconsistent with
bitmaps.

wxMac: Don't send an event for wx.RadioButton deselections, just the
selections.  This was done to make it consistent with the other
platforms.

wxMSW: Always set flat toolbar style, even under XP with themes: this
is necessary or separators aren't shown at all.

Fixes for bug #1217872, pydocview.DocService not correctly initialized.

Fix for bug #1217874, Error in parameter name in DocManager.CreateView.

Added wrappers for the wx.RendererNative class.

Added the wx.lib.splitter module, which contains the
MultiSplitterWindow class.  This class is much like the standard
wx.SplitterWindow class, except it allows more than one split, so it
can manage more than two child windows.

Docview and IDE patch from Morgan Hua with fix for bug #1217890
"Closing view crashes Python" plus some new features:

    New feature added to the IDE is 'Extensions'.  Under
    Tools|Options|Extensions, you can add calls to external programs.
    For example you can add a "Notepad" extension (under windows) that
    will exec Notepad on the currently open file.  A new "Notepad"
    menu item will appear under the Tools menu.

Some fixes to XRCed to make encoding errors a bit more user friendly.

XRCed changes from Roman Rolinsky:

    * Added new controls (Choicebook, Listbook, StatusBar,
      DatePicker), and completed style flags. Test window is opened
      for an available parent control if no specific view
      defined. Better handling of exceptions (highlighting does not